# MONAS

./: .gitignore  README.md
backend_modules/: codegen.py  evaluation.py  initialization.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Logo.jsx  Sidebar.jsx
frontend/src/data/: mockData.js
frontend/src/pages/: AdvisorPage.jsx  ExplainPage.jsx  HomePage.jsx  ParetoPage.jsx  PopulationPage.jsx  SearchPage.jsx
