[project]
name = "backend-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "configspace>=1.2.1",
    "h5py>=3.15.1",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "nasbench301>=0.3",
    "pathvalidate>=3.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "vllm>=0.11.0",
]
